# qt-bug-QIcon-fromTheme-invisible-tray-icon

./: CMakeLists.txt  default.nix  readme.md
src/: qt_find_icons.cpp  qt_invisible_system_tray_icon.cpp
src/resources/: resources.qrc
strace/: envs.txt  strace.qt_invisible_system_tray_icon.bad.txt  strace.qt_invisible_system_tray_icon.bad.txt.sh  strace.qt_invisible_system_tray_icon.diff  strace.qt_invisible_system_tray_icon.diff.sh  strace.qt_invisible_system_tray_icon.good.txt  strace.qt_invisible_system_tray_icon.good.txt.sh
